--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -7,104 +7,96 @@
     font-family: "Poppins", sans-serif;
 }
 
-header {
-    width: 100%;
-    border: red 1px solid;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    background-color: #BF86C5;
-    top: 0;
-
-    & span {
-        width: 41vw;
-        display: flex;
-        justify-content: center;
-
-        & img {
-            width: 250px;
-            height: 130px;
-        }
-    }
-
-    & .navheader {
-        border: solid blue 1px;
-        width: 20%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin-right: 10vw;
-
-        & a {
-            text-decoration: none;
-            color: #ffffff;
-            border:white solid 1px;
-            border-radius: 30px;
-            height: 2vw;
-            width: 8vw;
-            justify-content: center;
-            display: flex;
-            align-items: center;
-            font-size: 20px;
-        }
-
-        & a:hover {
-            transition: 0.2s;
-            background-color: #ffffff1e;
-        }
-    }
-}
-
 main {
     border: green solid 1px;
     width: 100%;
-    margin-top: 8vw;
+    margin-top: 9vw;
     display: flex;
+    border-bottom: #771e76de solid 3px;
+
     & .textohome {
         width: 50%;
-        border: solid yellow 1px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        & #text{
-            border: violet 1px solid;
+        & #text {
             width: 100%;
-            height: 30%;
+            height: 33.3%;
             align-items: center;
             justify-content: center;
             display: flex;
-            flex-direction: column ;
+            flex-direction: column;
+            padding: 20px;
+            border-bottom: #771e76de solid 3px;
+
+            & h1 {
+                font-size: 45px;
+                text-align: center;
+
+            }
         }
-        & #loginhome{
-            border: green solid 1px;
+
+        & #loginhome {
             width: 100%;
             display: flex;
             justify-content: center;
             flex-direction: column;
             align-items: center;
-            height: 20%;
-            & a{
+            height: 33.3%;
+            border-bottom: #771e76de solid 3px;
+            & h2 {
+                font-size: 30px;
+            }
+            & a {
                 text-decoration: none;
-                border: solid 1px #ffffff;
+                border: solid 2px #000000;
                 color: #ffffff;
+                background-color: #771e76de;
                 width: 30%;
                 text-align: center;
                 border-radius: 30px;
                 margin: 0.5vw;
-                
             }
-            & a:hover{
+
+            & a:hover {
                 transition: 0.2s;
-                background-color: #ffffff1e;
+                color: #ffffff1e;
             }
         }
-    } 
+
+        & #anuncievagas {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 33.3%;
+            & h2 {
+                margin-top: 25px;
+
+                & a {
+                    text-decoration: none;
+                    border: #000000 solid 2px;
+                    border-radius: 30px;
+                    padding: 8px;
+                    color: #ffffff;
+                    background-color: #771e76de;
+                }
+            }
+
+            & a:hover {
+                transition: 0.2s;
+                color: #ffffff1e;
+            }
+        }
+    }
+
     & .imghome {
         width: 50%;
         display: flex;
         justify-content: center;
         border: blue solid 1px;
-        height: 45vw;
+        height: 41vw;
+
         & img {
             width: 1000px;
         }
