--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -47,6 +47,7 @@ header {
 footer{
     width: 100%;
     background-color: #771e7625;
+    position: absolute;
     & img{
         width: 200px;
     }
