--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -10,95 +10,99 @@
 main {
     border: green solid 1px;
     width: 100%;
-    margin-top: 9vw;
+    margin-top: 15vh;
     display: flex;
-    border-bottom: #771e76de solid 3px;
 
-    & .textohome {
-        width: 50%;
+    & .content1 {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        & #text {
-            width: 100%;
-            height: 33.3%;
-            align-items: center;
-            justify-content: center;
+        & .textohome {
+            width: 50%;
             display: flex;
             flex-direction: column;
-            padding: 20px;
-            border-bottom: #771e76de solid 3px;
-
-            & h1 {
-                font-size: 45px;
-                text-align: center;
-
-            }
-        }
-
-        & #loginhome {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
             align-items: center;
-            height: 33.3%;
-            border-bottom: #771e76de solid 3px;
-            & h2 {
-                font-size: 30px;
-            }
-            & a {
-                text-decoration: none;
-                border: solid 2px #000000;
-                color: #ffffff;
-                background-color: #771e76de;
-                width: 30%;
-                text-align: center;
-                border-radius: 30px;
-                margin: 0.5vw;
-            }
 
-            & a:hover {
-                transition: 0.2s;
-                color: #ffffff1e;
-            }
-        }
+            & #text {
+                width: 100%;
+                height: 33.3%;
+                align-items: center;
+                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                padding: 20px;
 
-        & #anuncievagas {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 33.3%;
-            & h2 {
-                margin-top: 25px;
+                & h1 {
+                    font-size: 45px;
+                    text-align: center;
 
-                & a {
-                    text-decoration: none;
-                    border: #000000 solid 2px;
-                    border-radius: 30px;
-                    padding: 8px;
-                    color: #ffffff;
-                    background-color: #771e76de;
                 }
             }
 
-            & a:hover {
-                transition: 0.2s;
-                color: #ffffff1e;
+            & #loginhome {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+                height: 33.3%;
+
+                & h2 {
+                    font-size: 30px;
+                }
+
+                & a {
+                    text-decoration: none;
+                    border: solid 2px #000000;
+                    color: #ffffff;
+                    background-color: #771e76de;
+                    width: 30%;
+                    text-align: center;
+                    border-radius: 30px;
+                    margin: 0.5vw;
+                }
+
+                & a:hover {
+                    transition: 0.2s;
+                    color: #ffffff1e;
+                }
+            }
+
+            & #anuncievagas {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 33.3%;
+
+                & h2 {
+                    margin-top: 25px;
+
+                    & a {
+                        text-decoration: none;
+                        border: #000000 solid 2px;
+                        border-radius: 30px;
+                        padding: 8px;
+                        color: #ffffff;
+                        background-color: #771e76de;
+                    }
+                }
+
+                & a:hover {
+                    transition: 0.2s;
+                    color: #ffffff1e;
+                }
             }
         }
-    }
 
-    & .imghome {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        border: blue solid 1px;
-        height: 41vw;
+        & .imghome {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            border: blue solid 1px;
+            height: 41vw;
 
-        & img {
-            width: 1000px;
+            & img {
+                width: 100%;
+            }
         }
     }
 }
