--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -3,26 +3,30 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
 }
+
 main {
-    width: 100%;
-    height: 49.99vw;
+    width: 100vw;
     display: flex;
-    justify-content: center;
-
-    & .login {
-        width: 100%;
+    border: solid 1px green;
+    & .telalogin {
         display: flex;
-        align-items: center;
-
+        flex-direction: row;
+        border: solid 1px orange;
+        height: 100vh;
         & .inputs {
-            width:35%;
-            height: 100%;
-            border-right: black solid 2px;
+            width: 35%;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            border: solid 1px yellow;
+            & a{
+            & img{
+                width: 200px;
+            }
+        }
             & #textlogin {
                 border: 1px solid green;
                 width: 100%;
@@ -42,12 +46,11 @@ main {
 
             & #inputlogin {
                 border: red 1px solid;
-                width: 100%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 20px;
-                margin-top: 60px;
+                margin-top: 70px;
 
                 & input {
                     margin-top: 20px;
@@ -56,15 +59,18 @@ main {
                     border-radius: 30px;
                     padding: 10px;
                     font-size: 20px;
+                    outline: none;
                 }
+
                 & button {
                     margin-top: 50px;
-                    width: 30%;
+                    width: 70%;
                     height: 3vw;
                     border-radius: 30px;
                     padding: 10px;
                     font-size: 20px;
                     background-color: #771e76d2;
+                    color: white;
                 }
 
                 & button:hover {
@@ -72,29 +78,35 @@ main {
                     background-color: #771e76b6;
                     cursor: pointer;
                 }
-                & a{
+
+                & a {
                     margin-top: 10px;
                     text-decoration: none;
                     color: black;
                 }
-                & a:hover{
+
+                & a:hover {
                     transition: 0.2s;
-                    color:#771e76d2;
+                    color: #001aff;
                 }
             }
         }
-        & .imagemlogin{
+
+        & .imagemlogin {
+
             width: 65%;
-            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #771e76;
-            & img{
-                width: 700px;
+            border: solid 2px blue;
 
+            & img {
+                border: solid 1px green;
+                width: 50%;
             }
         }
     }
-    
 }
+
+@media(max-width:1730px) {}
