--- a/src/assets/css/cadastrousuario.css
+++ b/src/assets/css/cadastrousuario.css
@@ -35,6 +35,10 @@ main {
                     height: 150px;
                 }
             }
+
+            & #hiddentext {
+                display: none;
+            }
         }
 
         & .inputs {
@@ -53,6 +57,28 @@ main {
                 width: 70%;
                 border: solid 1px black;
                 height: 40px;
+            }
+
+            & .olhoSenha {
+                cursor: pointer;
+                position: absolute;
+                top: 44.5vh;
+                left: 79vw;
+
+                & img {
+                    width: 24px;
+                }
+            }
+
+            & .olhoSenha2 {
+                cursor: pointer;
+                position: absolute;
+                top: 50vh;
+                left: 79vw;
+
+                & img {
+                    width: 24px;
+                }
             }
 
             & select {
@@ -80,19 +106,318 @@ main {
             cursor: pointer;
         }
     }
-    & .links{
+
+    & .links {
         display: flex;
         justify-content: space-around;
         align-items: center;
         width: 50%;
-        & a{
+
+        & a {
             color: black;
             text-decoration: none;
         }
+
         & a:hover {
             transition: 0.2s;
             color: #001aff;
         }
-    }
 
+        & #responsividade,
+        #responsividade2 {
+            display: none;
+        }
+    }
+}
+/* Breakpoint 1 */
+@media (max-width:1254px) {
+    main {
+        & .telacadastro {
+            & .inputs {
+                & .olhoSenha {
+                    top: 44.5vh;
+                    left: 79vw;
+                }
+
+                & .olhoSenha2 {
+                    top: 50vh;
+                    left: 79vw;
+                }
+            }
+        }
+    }
+}
+/* Breakpoint 2 */
+@media (max-width:1403px) {
+    main {
+        & .links {
+            & a {
+                font-size: 15px;
+            }
+        }
+    }
+}
+/* Breakpoint 3 */
+@media (max-width:1357px) {
+    main {
+        & .links {
+            width: 70%;
+        }
+    }
+}
+/* Breakpoint 4 */
+@media (max-width:1000px) {
+    main {
+        & .telacadastro {
+            & .inputs {
+                & .olhoSenha {
+                    left: 78vw;
+                }
+
+                & .olhoSenha2 {
+                    left: 78vw;
+                }
+            }
+        }
+
+        & .links {
+            & a {
+                font-size: 13px;
+            }
+        }
+    }
+}
+/* Breakpoint 5 */
+@media (max-width:825px) {
+    main {
+        & .links {
+            flex-direction: column;
+
+            & a {
+                font-size: 15px;
+            }
+        }
+    }
+}
+/* Breakpoint 6 */
+@media (max-width:764px) {
+    main {
+        & .telacadastro {
+            & .inputs {
+                & .olhoSenha {
+                    top: 44vh;
+                    left: 76vw;
+                }
+
+                & .olhoSenha2 {
+                    top: 49.5vh;
+                    left: 76vw;
+                }
+            }
+        }
+    }
+}
+/* Breakpoint 7 */
+@media (max-width:519px) {
+    main {
+        & .telacadastro {
+            & .tituloelogo {
+                & h2 {
+                    font-size: 20px;
+                }
+            }
+
+            & .inputs {
+                & .olhoSenha {
+                    top: 43.5vh;
+
+                    & img {
+                        width: 20px;
+                    }
+                }
+
+                & .olhoSenha2 {
+                    top: 49vh;
+
+                    & img {
+                        width: 20px;
+                    }
+
+                }
+            }
+        }
+
+        & .links {
+            & a {
+                font-size: 13px;
+            }
+        }
+    }
+}
+/* Breakpoint 8 */
+@media (max-width:441px) {
+    main {
+        & .telacadastro {
+            & .tituloelogo {
+                & h2 {
+                    font-size: 16px;
+                }
+            }
+
+            & .inputs {
+                & input {
+                    width: 90%;
+                }
+
+                & select {
+                    width: 90%;
+                }
+
+                & button {
+                    width: 90%;
+                }
+
+                & .olhoSenha {
+                    top: 42.7vh;
+                    left: 80vw;
+
+                    & img {
+                        width: 20px;
+                    }
+                }
+
+                & .olhoSenha2 {
+                    top: 48.2vh;
+                    left: 80vw;
+
+                    & img {
+                        width: 20px;
+                    }
+
+                }
+            }
+        }
+
+        & .links {
+            height: 10vh;
+            justify-content: center;
+
+            & a {
+                font-size: 16px;
+                display: none
+            }
+
+            & #responsividade,
+            #responsividade2 {
+                display: initial;
+            }
+        }
+    }
+}
+/* Breakpoint 9 */
+@media (max-width:337px) {
+    main {
+        & .telacadastro {
+            & .tituloelogo {
+                & a {
+                    & img {
+                        width: 150px;
+                        height: 100px;
+                    }
+                }
+
+                & h2 {
+                    font-size: 14px;
+                }
+            }
+
+            & .inputs {
+                & .olhoSenha {
+                    top: 37vh;
+                    left: 80vw;
+
+                    & img {
+                        width: 18px;
+                    }
+                }
+
+                & .olhoSenha2 {
+                    top: 42.5vh;
+                    left: 80vw;
+
+                    & img {
+                        width: 18px;
+                    }
+
+                }
+            }
+        }
+
+        & .links {
+            & a {
+                font-size: 14px;
+            }
+        }
+    }
+}
+/* Breakpoint 10 */
+@media (max-width:288px) {
+    main {
+        & .telacadastro {
+            & .tituloelogo {
+                & a {
+                    & img {
+                        width: 150px;
+                        height: 100px;
+                    }
+                }
+
+                & h2 {
+                    font-size: 14px;
+                    display: none;
+                }
+
+                & #hiddentext {
+                    display: initial;
+                }
+            }
+
+            & .inputs {
+                & .olhoSenha {
+                    top: 37vh;
+                    left: 80vw;
+
+                    & img {
+                        width: 18px;
+                    }
+                }
+
+                & .olhoSenha2 {
+                    top: 42.5vh;
+                    left: 80vw;
+
+                    & img {
+                        width: 18px;
+                    }
+
+                }
+            }
+        }
+
+        & .links {
+            & a {
+                font-size: 14px;
+            }
+        }
+    }
+}
+/* Breakpoint 11 */
+@media (max-width:288px) {
+    main {
+        & .links {
+            & a {
+                font-size: 12px;
+            }
+        }
+    }
 }
