--- a/src/assets/css/cadastrousuario.css
+++ b/src/assets/css/cadastrousuario.css
@@ -49,86 +49,172 @@ main {
             align-items: center;
             gap: 10px;
             margin-top: 1vw;
-
-            & input {
+            & #mensagemErroNome{
+                display: none;
+                font-size: 14px;
+                color: red;
+            }
+            & #nome {
+                border: solid 1px black;
                 border-radius: 10px;
                 padding: 5px;
                 outline: none;
                 width: 70%;
-                border: solid 1px black;
                 height: 40px;
             }
 
-            & .olhoSenha {
-                cursor: pointer;
-                position: absolute;
-                top: 44.5vh;
-                left: 79vw;
-
-                & img {
-                    width: 24px;
-                }
-            }
-
-            & .olhoSenha2 {
-                cursor: pointer;
-                position: absolute;
-                top: 50vh;
-                left: 79vw;
-
-                & img {
-                    width: 24px;
-                }
-            }
-
-            & select {
+            & #email{
+                border: solid 1px black;
                 border-radius: 10px;
                 padding: 5px;
-                width: 70%;
                 outline: none;
-                border: solid 1px black;
+                width: 70%;
                 height: 40px;
+            }
+
+            & #confirmEmail {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+
+            & #password {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+
+            & #confirmPassword {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+
+            & #datadenascimento {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+
+            & #genero {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+
+            & #telefone {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+            & #telefone::-webkit-outer-spin-button,
+            #telefone::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+
+            & #cpf {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 5px;
+                outline: none;
+                width: 70%;
+                height: 40px;
+            }
+            & #cpf::-webkit-outer-spin-button,
+            #cpf::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
             }
         }
 
-        & button {
-            width: 70%;
-            border-radius: 10px;
-            border: solid 1px black;
-            color: white;
-            background-color: #771e76d2;
-            height: 40px;
-        }
-
-        & button:hover {
-            transition: 0.2s;
-            background-color: #771e76b6;
+        & .olhoSenha {
             cursor: pointer;
+            position: absolute;
+            top: 44.5vh;
+            left: 79vw;
+
+            & img {
+                width: 24px;
+            }
+        }
+
+        & .olhoSenha2 {
+            cursor: pointer;
+            position: absolute;
+            top: 50vh;
+            left: 79vw;
+
+            & img {
+                width: 24px;
+            }
+        }
+
+        & select {
+            border-radius: 10px;
+            padding: 5px;
+            width: 70%;
+            outline: none;
+            border: solid 1px black;
+            height: 40px;
         }
     }
 
+    & button {
+        width: 70%;
+        border-radius: 10px;
+        border: solid 1px black;
+        color: white;
+        background-color: #771e76d2;
+        height: 40px;
+    }
+
+    & button:hover {
+        transition: 0.2s;
+        background-color: #771e76b6;
+        cursor: pointer;
+    }
     & .links {
         display: flex;
         justify-content: space-around;
         align-items: center;
         width: 50%;
-
+    
         & a {
             color: black;
             text-decoration: none;
         }
-
+    
         & a:hover {
             transition: 0.2s;
             color: #001aff;
         }
-
+    
         & #responsividade,
         #responsividade2 {
             display: none;
         }
     }
 }
+
 /* Breakpoint 1 */
 @media (max-width:1254px) {
     main {
@@ -147,6 +233,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 2 */
 @media (max-width:1403px) {
     main {
@@ -157,6 +244,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 3 */
 @media (max-width:1357px) {
     main {
@@ -165,6 +253,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 4 */
 @media (max-width:1000px) {
     main {
@@ -187,6 +276,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 5 */
 @media (max-width:825px) {
     main {
@@ -199,6 +289,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 6 */
 @media (max-width:764px) {
     main {
@@ -217,6 +308,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 7 */
 @media (max-width:519px) {
     main {
@@ -254,6 +346,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 8 */
 @media (max-width:441px) {
     main {
@@ -314,6 +407,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 9 */
 @media (max-width:337px) {
     main {
@@ -360,6 +454,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 10 */
 @media (max-width:288px) {
     main {
@@ -411,6 +506,7 @@ main {
         }
     }
 }
+
 /* Breakpoint 11 */
 @media (max-width:288px) {
     main {
