--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+}
+
 header {
-    width: 100%;
+    width: 100vw;
     border: red 1px solid;
     display: flex;
     justify-content: space-between;
     position: absolute;
     background-color: #771e76de;
     top: 0;
+
     & span {
         width: 41vw;
         display: flex;
@@ -19,36 +29,104 @@ header {
 
     & .navheader {
         border: solid blue 1px;
-        width: 20%;
+        width: 40%;
         display: flex;
         justify-content: space-around;
         align-items: center;
         margin-right: 10vw;
 
-        & a {
-            text-decoration: none;
-            color: #ffffff;
-            border:white solid 1px;
-            border-radius: 30px;
-            height: 2vw;
-            width: 8vw;
-            justify-content: center;
-            display: flex;
-            align-items: center;
-            font-size: 20px;
+        & .userDrop {
+            position: relative;
+            display: inline-block;
+
+            & .Userdropbtn {
+                border: white solid 1px;
+                border-radius: 100px;
+                padding: 14px 16px;
+                background-color: inherit;
+            }
+
+            & .userDropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #771e76de;
+                min-width: 150px;
+                border-radius: 10px;
+                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+                z-index: 1;
+
+                & a {
+                    color: white;
+                    padding: 12px 16px;
+                    text-decoration: none;
+                    display: block;
+                    display: flex;
+                    justify-self: center;
+                    align-self: center;
+                    height: 45px;
+                }
+
+                & #btnLogout {
+                    color: white;
+                    padding: 12px 16px;
+                    text-decoration: none;
+                    display: block;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 8vw;
+                    background-color: inherit;
+                    cursor: pointer;
+                    font-size: 18px;
+                    border: solid 1px white;
+                    border-radius: 30px;
+                    height: 45px;
+                        
+                }
+                & #btnLogout:hover{
+                    transition: 0.2s;
+                    background-color: #ffffff1e;
+                }
+            }
         }
 
-        & a:hover {
-            transition: 0.2s;
-            background-color: #ffffff1e;
+        & .userDropdown-content:hover {
+            background-color: #771e76de;
         }
     }
+
+    & .userDrop:hover {
+        & .userDropdown-content {
+            display: block;
+        }
+    }
+
+    & a {
+        text-decoration: none;
+        color: #ffffff;
+        border: white solid 1px;
+        border-radius: 30px;
+        height: 2vw;
+        width: 8vw;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    & a:hover {
+        transition: 0.2s;
+        background-color: #ffffff1e;
+    }
 }
-footer{
+
+
+footer {
     width: 100%;
     background-color: #771e7625;
     position: absolute;
-    & img{
+
+    & img {
         width: 200px;
     }
 }
