--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -10,25 +10,21 @@
 main {
     width: 100vw;
     display: flex;
-    border: solid 1px green;
     & .telalogin {
         display: flex;
         flex-direction: row;
-        border: solid 1px orange;
         height: 100vh;
         & .inputs {
             width: 35%;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            border: solid 1px yellow;
             & a{
             & img{
                 width: 200px;
             }
         }
             & #textlogin {
-                border: 1px solid green;
                 width: 100%;
                 display: flex;
                 align-items: center;
@@ -45,13 +41,29 @@ main {
             }
 
             & #inputlogin {
-                border: red 1px solid;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 20px;
                 margin-top: 70px;
-
+                & #msgError{
+                    text-align: center;
+                    color: #ff0000;
+                    background-color: #ffbbbb;
+                    padding: 10px;
+                    border-radius: 4px;
+                    width: 50%;
+                    display: none;
+                }
+                & #msgSucess{
+                    text-align: center;
+                    color: #00bb00;
+                    background-color: #bbffbe;
+                    padding: 10px;
+                    border-radius: 4px;
+                    width: 50%;
+                    display: none;
+                }
                 & input {
                     margin-top: 20px;
                     width: 70%;
@@ -61,7 +73,7 @@ main {
                     font-size: 20px;
                     outline: none;
                 }
-
+                
                 & button {
                     margin-top: 50px;
                     width: 70%;
@@ -92,8 +104,8 @@ main {
                 & .olhoSenha{
                     cursor: pointer;
                     position: absolute;
-                    top:61.5vh ;
-                    left:27vw ;
+                    top:61.3vh;
+                    left:27vw;
                     & img{
                         width: 32px;
                     }
@@ -108,10 +120,8 @@ main {
             justify-content: center;
             align-items: center;
             background-color: #771e76;
-            border: solid 2px blue;
 
             & img {
-                border: solid 1px green;
                 width: 50%;
             }
         }
