login e cadastro concluidos

--- a/src/assets/css/cadastroempresa.css
+++ b/src/assets/css/cadastroempresa.css
@@ -45,7 +45,25 @@ main {
             align-items: center;
             gap: 10px;
             margin-top: 1vw;
-
+            
+            & #msgError{
+                text-align: center;
+                color: #ff0000;
+                background-color: #ffbbbb;
+                padding: 10px;
+                border-radius: 4px;
+                width: 30%;
+                display: none;
+            }
+            & #msgSucess{
+                text-align: center;
+                color: #00bb00;
+                background-color: #bbffbe;
+                padding: 10px;
+                border-radius: 4px;
+                width: 30%;
+                display: none;
+            }
             & input {
                 border-radius: 10px;
                 padding: 5px;
