--- a/src/assets/css/feed.css
+++ b/src/assets/css/feed.css
@@ -57,6 +57,10 @@ main {
                 align-items: center;
                 flex-direction: column;
 
+                & h3{
+                    font-size: 15px;
+                }
+
                 & a {
                     border: solid 1px black;
                     border-radius: 100px;
@@ -77,11 +81,28 @@ main {
                 border: solid 1px green;
                 width: 90%;
                 display: flex;
-                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+                & #tituloPost{
+                    border: solid 1px black;
+                    border-radius: 20px;
+                    width: 80%;
+                    height: 4vh;
+                    margin: 1vh;
+                    padding: 10px;
+                    font-size: 16px;
+                }
                 & #conteudoPost{
                     border: solid 1px black;
                     border-radius: 20px;
                     width: 80%;
+                    height: 10vh;
+                    padding: 10px;
+                    font-size: 16px;
+                }
+                & #conteudoPost::-webkit-scrollbar{
+                    width: 0;
+                    
                 }
             }
             & .btnInterface{
