--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -66,7 +66,7 @@ header {
                     height: 45px;
                 }
 
-                & #btnLogout {
+                & #btnLogout, #selectPerfil {
                     color: white;
                     padding: 12px 16px;
                     text-decoration: none;
@@ -82,6 +82,10 @@ header {
                     border-radius: 30px;
                     height: 45px;
                         
+                }
+                &  #selectPerfil:hover{
+                    transition: 0.2s;
+                    background-color: #ffffff1e;
                 }
                 & #btnLogout:hover{
                     transition: 0.2s;
