--- a/src/assets/css/feed.css
+++ b/src/assets/css/feed.css
@@ -3,7 +3,6 @@ body{
 }
 main {
     background-color: rgb(245, 245, 245);
-    border: solid 1px green;
     margin-top: 16vh;
     width: 100vw;
     display: flex;
@@ -11,7 +10,6 @@ main {
     align-items: center;
 
     & .searchPosts {
-        border: solid 1px yellow;
         display: flex;
         justify-content: center;
 
@@ -35,7 +33,6 @@ main {
     }
 
     & .painelPosts {
-        border: solid 1px red;
         width: 85%;
         height: 100%;
         display: flex;
@@ -44,15 +41,15 @@ main {
 
         & .adicionarPost {
             margin-top: 3vh;
-            border: solid 1px blue;
+            border: solid 1px black;
             width: 80%;
             height: 20vh;
             display: flex;
             flex-wrap: wrap;
 
             & .imgPost {
+                border-right: solid 1px black;
                 height: 75%;
-                border: solid 1px green;
                 width: 10%;
                 display: flex;
                 justify-content: center;
@@ -80,7 +77,6 @@ main {
 
             & .inputPost {
                 height: 75%;
-                border: solid 1px green;
                 width: 90%;
                 display: flex;
                 flex-direction: column;
@@ -112,7 +108,7 @@ main {
             }
 
             & .btnInterface {
-                border: solid 1px fuchsia;
+                border: solid 1px black;
                 width: 100%;
                 height: 25%;
                 display: flex;
@@ -143,21 +139,20 @@ main {
             height: 100%;
             display: flex;
             flex-direction: column;
-            border: solid 1px black;
 
             & .post1 {
                 width: 100%;
-                border: solid 1px red;
+                border: solid 1px black;
                 margin-top: 3vh;
                 display: flex;
 
                 & .autorPost {
                     width: 10%;
-                    border: solid 1px purple;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
+                    border: solid 1px black;
 
                     & h3 {
                         font-size: 15px;
@@ -182,24 +177,22 @@ main {
                     width: 90%;
                     & .conteudoDoPost {
                         width: 100%;
-                        border: solid 1px purple;
+                        border: solid 1px black;
                         justify-content: center;
                         flex-direction: column;
 
                         & h3 {
-                            border: yellow solid 1px;
                             text-align: center;
                             padding: 5px;
                         }
                         & #paragrafoPost {
                                 width: 100%;
-                                border: yellow solid 1px;
                                 padding: 5px;
 
                         }
                     }
                     & .btnPosts {
-                        border: solid 1px fuchsia;
+                        border: solid 1px black;
                         height: 2vw;
                         display: flex;
                         justify-content: space-around;
