--- a/src/assets/css/feed.css
+++ b/src/assets/css/feed.css
@@ -18,6 +18,7 @@ main {
             height: 3vh;
             border: solid 1px black;
             border-radius: 10px;
+            padding: 10px;
         }
 
         & #pesquisarBtn {
@@ -101,6 +102,7 @@ main {
                     height: 10vh;
                     padding: 10px;
                     font-size: 16px;
+                    resize: none;
                 }
 
                 & #conteudoPost::-webkit-scrollbar {
