--- a/src/assets/css/cadastrousuario.css
+++ b/src/assets/css/cadastrousuario.css
@@ -6,7 +6,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-
+body {
+    background-color: rgb(245, 245, 245);
+}
 main {
     width: 100vw;
     height: 100vh;
