--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+body {
+    background-color: rgb(245, 245, 245);
+}
 header {
     width: 100vw;
     display: flex;
